# milvus_search

./: README.md  config.ini  pyproject.toml  requirements.txt  run.bash
src/: crawl_article.py  embed_store.py  search.py  store_in_mysql.py  summarization.py
