[project]
name = "assignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "configparser>=7.1.0",
    "mysql-connector-python>=9.1.0",
    "nltk>=3.9.1",
    "pymilvus>=2.5.2",
    "requests>=2.32.3",
    "sentence-transformers>=3.3.1",
    "spacy>=3.8.3",
    "transformers>=4.47.1",
]
